# xexe

./: .gitignore  CMakeLists.txt  README.md  about.md  mod.json
resources/: .gitkeep
src/: main.cpp
src/config/: options.hpp
src/core/: engine.cpp  engine.hpp  task_queue.cpp  task_queue.hpp  tick_driver.cpp  tick_driver.hpp
src/hooks/: action_manager_hook.cpp  base_layer_hook.cpp  director_hook.cpp  pause_layer_hook.cpp  play_layer_hook.cpp  player_hook.cpp  scheduler_hook.cpp
src/macro/: action.hpp  macro_engine.cpp  macro_engine.hpp
src/practice/: player_state.cpp  player_state.hpp  practice_fix.cpp  practice_fix.hpp
src/ui/: panel.cpp
src/util/: midhook.cpp  midhook.hpp
